unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Status__c/pse__Revenue_Forecast_Batch_Status__c.object-meta.xml
<CustomObject>
    <description>Stores the status of Revenue Forecasting batch Apex jobs.</description>
    <label>Revenue Forecast Batch Status</label>
    <nameField>
        <displayFormat>RFS-{00000000}</displayFormat>
        <label>Revenue Forecast Batch Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Forecast Batch Statuses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>