unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Status__c/fields/pse__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>pse__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity relating to this batch status record.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Revenue Forecast Batch Status</relationshipLabel>
    <relationshipName>Revenue_Forecast_Batch_Status</relationshipName>
    <type>Lookup</type>
</CustomField>