unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Status__c/fields/pse__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>pse__Record_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Salesforce record ID of the record this batch status record relates to.</description>
    <inlineHelpText>The Salesforce record ID of the record this batch status record relates to.</inlineHelpText>
    <label>Record ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>