unpackaged/main/default/objects/pse__Revenue_Forecast_Batch_Status__c/fields/pse__Revenue_Forecast_Batch_Update_Pending__c.field-meta.xml
<CustomField>
    <fullName>pse__Revenue_Forecast_Batch_Update_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates when the related record is queued ready for revenue forecast processing. This is a system controlled field.</description>
    <inlineHelpText>Indicates when the related record is queued ready for revenue forecast processing. This is a system controlled field.</inlineHelpText>
    <label>Revenue Forecast Batch Update Pending</label>
    <type>Checkbox</type>
</CustomField>